# llm-orchestrator

./: .gitignore  README.md  pyproject.toml
src/app/: cli.py  config.py
src/app/evaluation/: selector.py
src/app/llm/: base.py  gemini_client.py  hf_client.py  mock_client.py  openai_client.py
src/app/patterns/: command.py  factory.py  observer.py  strategy.py
src/app/utils/: logging_setup.py
tests/: test_smoke.py
